Fix header control spacing

--- a/src/core/public/chrome/ui/header/header_controls_container.scss
+++ b/src/core/public/chrome/ui/header/header_controls_container.scss
@@ -4,7 +4,10 @@
 */
 
 .headerControl {
-  gap: 0 $euiSizeS;
+  // stylelint-disable-next-line @osd/stylelint/no_modifying_global_selectors
+  & > .euiHeaderSectionItem {
+    margin: 0 $euiSizeXS;
+  }
 
   &.headerDescriptionControl {
     padding: 0 $euiSizeM;
